res_pjsip_sdp_rtp.c: Support keepalive for video streams.

ASTERISK-28890 #close

Change-Id: Iad269a8dc36f892ede90fe8ceb3010560c0f70d1